--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "winemapmobile",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://emgdevhelp.github.io/winemapmobile/",
   "dependencies": {
     "@commodityvectors/react-mapbox-gl": "^2.0.3",
     "@testing-library/jest-dom": "^5.16.5",
